# Quasar

./: .gitignore  Cargo.toml  LICENSE  README.md  main.dashboard.json  package-lock.json  package.json
.github/workflows/: ci.yaml
faas/olap-engine/: Cargo.toml
faas/olap-engine/src/: lib.rs
faas/replay-writer/: Cargo.toml
faas/replay-writer/src/: lib.rs
faas/replay-writer/tests/: compression_integration.rs
faas/telemetry-bridge/: Cargo.toml
faas/telemetry-bridge/src/: lib.rs
faas/telemetry-bridge/tests/: oidc_integration.rs
faas/timeseries-writer/: Cargo.toml
faas/timeseries-writer/src/: lib.rs
faas/view-builder/: Cargo.toml
faas/view-builder/src/: lib.rs
manifests/: quasar-analytics.yaml  quasar-core.yaml  regional-sales.dashboard.json
openspec/specs/analytics/: spec.md
openspec/specs/control-plane/: spec.md
openspec/specs/security/: spec.md
openspec/specs/testing-ci/: spec.md
openspec/specs/ui/: spec.md
quasar-mcp/: package.json
quasar-mcp/src/: index.js
quasar-vscode/: package.json
quasar-vscode/src/: extension.js
schemas/: dashboard-manifest.schema.json  replay-payload.schema.json  telemetry-event.schema.json
sdk/: README.md  package.json  rollup.config.mjs
sdk/analytics-core/: package.json
sdk/analytics-core/src/: index.js  queue.js  rage-click.js  replay-loader.js  (+2 more)
sdk/analytics-replay/: package.json
tests/e2e/: mock-dom.js  package.json  runner.js
ui/: index.html  package.json  tailwind.config.js  vite.config.js
ui/public/: main.dashboard.json
ui/src/: main.js  styles.css
wit/: ingestion.wit  query.wit
(+31 files in other folders)
