[workspace]
resolver = "2"
members = [
  "faas/telemetry-bridge",
  "faas/timeseries-writer",
  "faas/olap-engine",
  "faas/view-builder",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/astorise/Quasar"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
