[package]
name = "replay-writer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
# Enables the real `zstd` Wasm/WASI binding for production builds.
# Kept off in the workspace default so `cargo test` builds purely offline.
zstd = ["dep:zstd"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zstd = { version = "0.13", optional = true, default-features = false }
